# dumb-api

./: pyproject.toml
dumb_api/: __init__.py
