[tool.poetry]
name = "dumb-api"
version = "0.1.0"
description = ""
authors = ["Raphael Marra <raphael.marra@loggi.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
